[project]
name = "qwen3-tts-comfyui"  # Unique identifier (immutable after creation)
description = "ComfyUI custom nodes for speech synthesis, voice cloning, and voice design based on Qwen3-TTS"
version = "1.0.6"  # Semantic versioning
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
dependencies = [
    "torch",
    "torchaudio",
    "transformers>=4.57.0",
    "librosa",
    "soundfile",
    "accelerate",
    "numpy",
    "einops",
    "tiktoken",
    "sentencepiece"
]

[project.urls]
Repository = "https://github.com/flybirdxx/ComfyUI-Qwen-TTS"

[tool.comfy]
PublisherId = "flybirdxx"  # TODO: Fill in your Publisher ID from https://registry.comfy.org
DisplayName = "Qwen3-TTS - Voice Synthesis & Cloning"
Icon = "https://raw.githubusercontent.com/flybirdxx/ComfyUI-Qwen-TTS/main/example/qwen3-tts.png"
